# pyms

./: .coveragerc  .coveralls.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  Pipfile  README.md  mkdocs.yml  pylintrc  pyproject.toml  requirements-tests.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-package.yml
docker/: docker-compose.yml
docs/: command_line.md  configuration.md  encrypt_decryt_configuration.md  examples.md  hacktoberfest_es_2020.md  index.md  installation.md  links_articles.md  microservices.md  microservicios.md  ms_class.md  quickstart.md  requirements.txt  routing.md  services.md  structure.md  structure_project.md  tutorial_create_services.md  tutorial_propagate_traces.md  tutorials.md
examples/microservice_configuration/: __init__.py  config.yml  main.py  swagger.yaml  views.py
examples/microservice_crypt_aws_kms/: config.yml  main.py
examples/microservice_distribued_tracing/ms1/: config.yml  main.py
examples/microservice_distribued_tracing/ms2/: config.yml  main.py
examples/microservice_metrics/: __init__.py  config.yml  main.py  swagger.yaml  views.py
examples/microservice_requests/: __init__.py  config.yml  main.py  swagger.yaml  views.py
examples/microservice_service_discovery/: config.yml  main.py  service.py
examples/microservice_service_discovery_consul/: config.yml  main.py
examples/microservice_swagger/: config.yml  main.py  swagger.yaml  views.py
examples/microservice_tracer/: config.yml  main.py  views.py
examples/mininum_microservice/: config.yml  main.py
examples/mininum_microservice_docker/: Dockerfile  config-docker.yml  config.-docker.yml  config.yml  main.py  requirements.txt
examples/mininum_swagger_microservice/: main.py
pyms/: __init__.py  constants.py  exceptions.py
pyms/cloud/aws/: kms.py
pyms/cmd/: __init__.py  main.py
pyms/config/: __init__.py  conf.py  config.py  confile.py  loader.py  resource.py
pyms/crypt/: base.py  driver.py  fernet.py
pyms/flask/app/: __init__.py  create_app.py  create_config.py  swagger.py  utils.py
pyms/flask/configreload/: __init__.py  configreload.py
pyms/flask/healthcheck/: __init__.py  healthcheck.py
pyms/flask/metrics/: __init__.py  flask.py  logger.py  metrics.py
pyms/flask/services/: driver.py  metrics.py  opentelemetry.py  requests.py  service_discovery.py  swagger.py  tracer.py
pyms/logger/: __init__.py  logger.py
pyms/rest_template/: rest_template.py
pyms/services_discovery/consulate/: __init__.py  adapters.py  cli.py  client.py  utils.py
pyms/services_discovery/consulate/api/: __init__.py  acl.py  agent.py  base.py  catalog.py  coordinate.py  event.py  health.py  kv.py  lock.py  session.py  status.py
pyms/services_discovery/consulate/models/: acl.py  agent.py  base.py
pyms/tracer/: __init__.py  main.py
pyms/utils/: __init__.py  crypt.py  files.py  utils.py
tests/: common.py  config-tests-bad-structure.yml  config-tests-bad-structure2.yml  config-tests-bad-structure3.yml  config-tests-cache.yml  config-tests-cache2.yml  config-tests-debug-off.yml  config-tests-debug.yml  config-tests-deprecated.yml  config-tests-encrypted-aws-kms.yml  config-tests-encrypted.yml  config-tests-flask-encrypted-aws.yml  config-tests-flask-encrypted-fernet.yml  config-tests-flask-encrypted-none.yml  config-tests-flask-swagger.yml  config-tests-flask-trace-lightstep.yml  config-tests-flask.yml  config-tests-metrics.yml  config-tests-reload1.yml  config-tests-reload2.yml  config-tests-requests-no-data.yml  config-tests-requests.yml  config-tests-service-discovery.yml  config-tests-swagger.yml  config-tests-swagger_3.yml  config-tests-swagger_3_no_abs_path.yml  config-tests-swagger_no_abs_path.yml  config-tests.json  config-tests.yml  conftest.py  swagger.yaml  swagger3.yaml  test_cmd.py  test_config.py  test_crypt.py  test_flask.py  test_logger.py  test_metrics.py  test_requests.py  test_service_discovery.py  (+6 more)
tests/services_discovery_consulate/: base.py  test_acl.py  test_agent.py  test_api.py  test_base_model.py  test_catalog.py  test_coordinate.py  test_event.py  test_kv.py  test_session.py  test_utils.py
tests/swagger/: swagger.yaml
tests/swagger_for_tests/: info.yaml  swagger.yaml
