[metadata]
name = py-ms
author = attr:pyms.__author__
author_email = attr:pyms.__email__
version = attr:pyms.__version__
description = Library of utils to create REST Python Microservices
long_description = file: README.md, LICENSE
platforms = any
license = License :: OSI Approved :: GNU General Public License v3 (GPLv3)
classifiers =
    Development Status :: 4 - Beta
    Framework :: Flask
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python",
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
zip_safe = true
packages = find:
install_requires =
    flask==2.0.2
    python-json-logger>=2.0.0
    pyyaml>=5.3.1
    anyconfig>=0.10.1
    cryptography>=3.4.7

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
    *.examples
    *.examples.*
    examples.*
    examples

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    pyms = pyms.cmd.main:Command

[isort]
profile = black
line_length = 120

[flake8]
ignore = E501
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-complexity = 12
max-line-length = 120

[mypy]
ignore_missing_imports = True