[options]
include_package_data = true
zip_safe = true
packages = find:
install_requires =
    flask>=1.1.4
    python-json-logger>=2.0.0
    pyyaml>=5.3.1
    anyconfig>=0.10.1
    cryptography>=3.4.7

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
    *.examples
    *.examples.*
    examples.*
    examples

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    pyms = pyms.cmd.main:Command

[isort]
profile = black
line_length = 120

[flake8]
ignore = E501
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist
max-complexity = 12
max-line-length = 120

[mypy]
ignore_missing_imports = True